--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ font-family: 'IBM Plex Sans', sans-serif;
 display:flex;
 flex-direction: column;	
 justify-content: center;
-align items:center;
+align-items:center;
 }
 
 
